Clock & Pomodoro Added

--- a/index.html
+++ b/index.html
@@ -3,23 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clock</title>
+    <title id="Home">Clock</title>
     <link rel="icon" type="image/png" href="img/clock.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="home.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <ul>
-        <li><a href="Pomodoro/Shortbreak/index.html">Pomodoro</a></li>
-        <li><a href=""></a></li>
-      </ul>
-    </nav>
+    <nav></nav>
     <main>
       <div id="clock-container">
         <div id="clock">00:00:00</div>
         <div id="date"></div>
       </div>
     </main>
-    <script src="script.js"></script>
+    <script src="navBar/navBar.js"></script>
+    <script src="home.js"></script>
   </body>
 </html>
