--- a/Pomodoro/index.html
+++ b/Pomodoro/index.html
@@ -11,10 +11,10 @@
     <video loop muted plays-inline id="videoBg" class="videoBackground hidden">
       <source src="../img/Video/domeViolin.mp4" type="video/mp4" />
     </video>
-    <audio loop src="../img/Mp3/moonlightSonata.mp3" id="audioBg"></audio>
+    <audio src="../img/Mp3/alarm.mp3" id="audioBg"></audio>
     <nav></nav>
     <main>
-      <h1>
+      <h1 id="quote">
         "Thy right is to work only, but never to its fruits; let the fruit of
         action be not thy motive, nor let thy attachment be to inaction. -The
         Bhagavad Gita"
